--- a/About.css
+++ b/About.css
@@ -29,7 +29,7 @@ main{
     color: #f4ebdb;
 }
 .logo{
-    background-image: url(image/sozai4.jpg);
+    background-image: url("https://github.com/shooo-oo/shooo-oo.github.io/blob/master/sozai4.jpg?raw=true");
     background-size: cover;
     color:#ffffff;
     height: 550px;
